// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`attest has correct payload in JWT for an attestation 1`] = `Promise {}`;

exports[`configuration configNetworks if networks key is passed in it must contain configuration object 1`] = `"Network configuration object required"`;

exports[`configuration configNetworks should require a registry address 1`] = `"Malformed network config object, object must have 'registry' key specified."`;

exports[`configuration configNetworks should require a rpcUrl 1`] = `"Malformed network config object, object must have 'rpcUrl' key specified."`;

exports[`createRequest creates a valid JWT for a request 1`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "publicKey": Array [
      Object {
        "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "issuer": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NkstUiJ9.eyJpYXQiOjE0ODUzMjExMzMsInJlcXVlc3RlZCI6WyJuYW1lIiwicGhvbmUiXSwiZXhwIjoxNDg1MzIxNzMzLCJ0eXBlIjoic2hhcmVSZXEiLCJpc3MiOiJkaWQ6ZXRocjoweGJjM2FlNTliYzc2Zjg5NDgyMjYyMmNkZWY3YTIwMThkYmUzNTM4NDAifQ.lK1mwngv1BJ6AMcBYregenqxMUvIsQStMcnqslrDpW1HgCE0LVxf37TElvX6KJNe-OtQxZEB_sJMVkpQ_RQkfAE",
  "payload": Object {
    "exp": 1485321733,
    "iat": 1485321133,
    "iss": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "requested": Array [
      "name",
      "phone",
    ],
    "type": "shareReq",
  },
  "signer": Object {
    "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
    "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`createRequest has correct payload in JWT for a plain request for public details 1`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "publicKey": Array [
      Object {
        "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "issuer": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NkstUiJ9.eyJpYXQiOjE0ODUzMjExMzMsImV4cCI6MTQ4NTMyMTczMywidHlwZSI6InNoYXJlUmVxIiwiaXNzIjoiZGlkOmV0aHI6MHhiYzNhZTU5YmM3NmY4OTQ4MjI2MjJjZGVmN2EyMDE4ZGJlMzUzODQwIn0.ptW7jS5lzfcbWCgi3M4MD73dRDTbkfl4v7wM_6Z8pbBAnZQpQYWHUhotfoSsvYdq1aQTKVg-Dlacdpbl--t_RgE",
  "payload": Object {
    "exp": 1485321733,
    "iat": 1485321133,
    "iss": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "type": "shareReq",
  },
  "signer": Object {
    "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
    "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`createRequest has correct payload in JWT for a request 1`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "publicKey": Array [
      Object {
        "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "issuer": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NkstUiJ9.eyJpYXQiOjE0ODUzMjExMzMsInJlcXVlc3RlZCI6WyJuYW1lIiwicGhvbmUiXSwiZXhwIjoxNDg1MzIxNzMzLCJ0eXBlIjoic2hhcmVSZXEiLCJpc3MiOiJkaWQ6ZXRocjoweGJjM2FlNTliYzc2Zjg5NDgyMjYyMmNkZWY3YTIwMThkYmUzNTM4NDAifQ.lK1mwngv1BJ6AMcBYregenqxMUvIsQStMcnqslrDpW1HgCE0LVxf37TElvX6KJNe-OtQxZEB_sJMVkpQ_RQkfAE",
  "payload": Object {
    "exp": 1485321733,
    "iat": 1485321133,
    "iss": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "requested": Array [
      "name",
      "phone",
    ],
    "type": "shareReq",
  },
  "signer": Object {
    "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
    "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`createRequest has correct payload in JWT for a request asking for verified credentials 1`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "publicKey": Array [
      Object {
        "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "issuer": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NkstUiJ9.eyJpYXQiOjE0ODUzMjExMzMsInJlcXVlc3RlZCI6WyJuYW1lIiwicGhvbmUiXSwidmVyaWZpZWQiOlsibmFtZSJdLCJleHAiOjE0ODUzMjE3MzMsInR5cGUiOiJzaGFyZVJlcSIsImlzcyI6ImRpZDpldGhyOjB4YmMzYWU1OWJjNzZmODk0ODIyNjIyY2RlZjdhMjAxOGRiZTM1Mzg0MCJ9.QlUjEecMW92CSwT50ebDJNK3kV2AMaU9aJhWxRYsPTy_dE_HmWYRV7rb6gQwqXEcZoEit1g6DyvR6Yyb5czx8wA",
  "payload": Object {
    "exp": 1485321733,
    "iat": 1485321133,
    "iss": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "requested": Array [
      "name",
      "phone",
    ],
    "type": "shareReq",
    "verified": Array [
      "name",
    ],
  },
  "signer": Object {
    "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
    "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`createRequest has correct payload in JWT for a request for push notifications 1`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "publicKey": Array [
      Object {
        "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "issuer": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NkstUiJ9.eyJpYXQiOjE0ODUzMjExMzMsInJlcXVlc3RlZCI6WyJuYW1lIiwicGhvbmUiXSwicGVybWlzc2lvbnMiOlsibm90aWZpY2F0aW9ucyJdLCJleHAiOjE0ODUzMjE3MzMsInR5cGUiOiJzaGFyZVJlcSIsImlzcyI6ImRpZDpldGhyOjB4YmMzYWU1OWJjNzZmODk0ODIyNjIyY2RlZjdhMjAxOGRiZTM1Mzg0MCJ9.NF-rdkI9hkH9nMSyYxzO7g8PpyDyT9QzSMO0IA4UUpoDktKKU_hP-7dn0oeRWikS8beaZt2bXNDhQxxnmynDLAA",
  "payload": Object {
    "exp": 1485321733,
    "iat": 1485321133,
    "iss": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "permissions": Array [
      "notifications",
    ],
    "requested": Array [
      "name",
      "phone",
    ],
    "type": "shareReq",
  },
  "signer": Object {
    "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
    "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`createRequest has correct payload in JWT for a request with callbackUrl 1`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "publicKey": Array [
      Object {
        "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "issuer": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NkstUiJ9.eyJpYXQiOjE0ODUzMjExMzMsInJlcXVlc3RlZCI6WyJuYW1lIiwicGhvbmUiXSwiY2FsbGJhY2siOiJodHRwczovL215c2VydmVyLmNvbSIsImV4cCI6MTQ4NTMyMTczMywidHlwZSI6InNoYXJlUmVxIiwiaXNzIjoiZGlkOmV0aHI6MHhiYzNhZTU5YmM3NmY4OTQ4MjI2MjJjZGVmN2EyMDE4ZGJlMzUzODQwIn0.dBsEjS7lwjfp-iC91JHbNc_8-HWlV2NV37SGm1aIlEl9hgP7Tx1Q5pQyssqnWqtAuHmtJwbTd5Ma7JCn7XRnuwE",
  "payload": Object {
    "callback": "https://myserver.com",
    "exp": 1485321733,
    "iat": 1485321133,
    "iss": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "requested": Array [
      "name",
      "phone",
    ],
    "type": "shareReq",
  },
  "signer": Object {
    "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
    "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`createRequest has correct payload in JWT requesting a bad accountType 1`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "publicKey": Array [
      Object {
        "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "issuer": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NkstUiJ9.eyJpYXQiOjE0ODUzMjExMzMsImV4cCI6MTQ4NTMyMTczMywidHlwZSI6InNoYXJlUmVxIiwiaXNzIjoiZGlkOmV0aHI6MHhiYzNhZTU5YmM3NmY4OTQ4MjI2MjJjZGVmN2EyMDE4ZGJlMzUzODQwIn0.ptW7jS5lzfcbWCgi3M4MD73dRDTbkfl4v7wM_6Z8pbBAnZQpQYWHUhotfoSsvYdq1aQTKVg-Dlacdpbl--t_RgE",
  "payload": Object {
    "exp": 1485321733,
    "iat": 1485321133,
    "iss": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "type": "shareReq",
  },
  "signer": Object {
    "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
    "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`createRequest has correct payload in JWT requesting a specific accountType 1`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "publicKey": Array [
      Object {
        "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "issuer": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NkstUiJ9.eyJpYXQiOjE0ODUzMjExMzMsImFjdCI6ImRldmljZWtleSIsImV4cCI6MTQ4NTMyMTczMywidHlwZSI6InNoYXJlUmVxIiwiaXNzIjoiZGlkOmV0aHI6MHhiYzNhZTU5YmM3NmY4OTQ4MjI2MjJjZGVmN2EyMDE4ZGJlMzUzODQwIn0.C82oMNTrT_NDA9KBJ7Mjh-uBt2RIgGfPCQzAsWsIcjK286ugs-qyg3nVVU_sgy7OfSS0vjoMcJLmxqtGOLCqxAE",
  "payload": Object {
    "act": "devicekey",
    "exp": 1485321733,
    "iat": 1485321133,
    "iss": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "type": "shareReq",
  },
  "signer": Object {
    "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
    "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`createRequest has correct payload in JWT requesting a specific network_id 1`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "publicKey": Array [
      Object {
        "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "issuer": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NkstUiJ9.eyJpYXQiOjE0ODUzMjExMzMsIm5ldCI6IjB4NCIsImV4cCI6MTQ4NTMyMTczMywidHlwZSI6InNoYXJlUmVxIiwiaXNzIjoiZGlkOmV0aHI6MHhiYzNhZTU5YmM3NmY4OTQ4MjI2MjJjZGVmN2EyMDE4ZGJlMzUzODQwIn0.7_-lo-sKCpiTCdUZbBfWZn5lbdl2hr3DfRbYmwIfG-atUeN-enE_fRSw-mIyvTaah6XKCH0M09xDY2pMdYazugE",
  "payload": Object {
    "exp": 1485321733,
    "iat": 1485321133,
    "iss": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "net": "0x4",
    "type": "shareReq",
  },
  "signer": Object {
    "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
    "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`createRequest ignores unsupported request parameters 1`] = `
Object {
  "doc": Object {
    "@context": "https://w3id.org/did/v1",
    "authentication": Array [
      Object {
        "publicKey": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "type": "Secp256k1SignatureAuthentication2018",
      },
    ],
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "publicKey": Array [
      Object {
        "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
        "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
        "type": "Secp256k1VerificationKey2018",
      },
    ],
  },
  "issuer": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
  "jwt": "eyJ0eXAiOiJKV1QiLCJhbGciOiJFUzI1NkstUiJ9.eyJpYXQiOjE0ODUzMjExMzMsImV4cCI6MTQ4NTMyMTczMywidHlwZSI6InNoYXJlUmVxIiwiaXNzIjoiZGlkOmV0aHI6MHhiYzNhZTU5YmM3NmY4OTQ4MjI2MjJjZGVmN2EyMDE4ZGJlMzUzODQwIn0.ptW7jS5lzfcbWCgi3M4MD73dRDTbkfl4v7wM_6Z8pbBAnZQpQYWHUhotfoSsvYdq1aQTKVg-Dlacdpbl--t_RgE",
  "payload": Object {
    "exp": 1485321733,
    "iat": 1485321133,
    "iss": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "type": "shareReq",
  },
  "signer": Object {
    "ethereumAddress": "0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "id": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840#owner",
    "owner": "did:ethr:0xbc3ae59bc76f894822622cdef7a2018dbe353840",
    "type": "Secp256k1VerificationKey2018",
  },
}
`;

exports[`receive handles response to expired request 1`] = `Promise {}`;

exports[`receive handles response with missing challenge 1`] = `Promise {}`;

exports[`receive returns profile mixing public and private claims 1`] = `Promise {}`;

exports[`receive returns profile mixing public and private claims 2`] = `Promise {}`;

exports[`receive returns profile mixing public and private claims and verified credentials 1`] = `Promise {}`;

exports[`receive returns profile mixing public and private claims and verified credentials 2`] = `Promise {}`;

exports[`receive returns profile with device key claims 1`] = `Promise {}`;

exports[`receive returns profile with only public claims 1`] = `Promise {}`;

exports[`receive returns profile with only public claims 2`] = `Promise {}`;

exports[`receive returns profile with private chain network id claims 1`] = `Promise {}`;

exports[`receive returns profile with private chain network id claims 2`] = `Promise {}`;

exports[`receive returns pushToken if available 1`] = `Promise {}`;

exports[`receive returns pushToken if available 2`] = `Promise {}`;
